Upgrade to 9.0.0-SNAPSHOT
Upgrade dependencies version
Switch to JavaFX 21
Add support for JPMS