@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.7.0-SNAPSHOT</version>
+		<version>9.0.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jrebirth.af</groupId>
@@ -12,11 +13,6 @@
 
 	<name>Processor</name>
 	<description>Processor used to create Module.xml file</description>
-
-
-	<properties>
-		<roaster.version>2.20.7.Final</roaster.version>
-	</properties>
 
 	<build>
 
@@ -26,7 +22,12 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<compilerArgument>-proc:none</compilerArgument>
+					<compilerArgs>
+						<arg>--add-reads</arg>
+						<arg>org.jrebirth.af.processor=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
+
 			</plugin>
 
 			<plugin>
@@ -39,7 +40,8 @@
 							<goal>single</goal>
 						</goals>
 						<configuration>
-							<finalName>JRebirth-AnnotationProcessor-${project.version}</finalName>
+							<finalName>
+								JRebirth-AnnotationProcessor-${project.version}</finalName>
 							<appendAssemblyId>true</appendAssemblyId>
 							<attach>true</attach>
 							<descriptors>
@@ -55,36 +57,39 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.jboss.forge.roaster</groupId>
-			<artifactId>roaster-api</artifactId>
-			<version>${roaster.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jboss.forge.roaster</groupId>
-			<artifactId>roaster-jdt</artifactId>
-			<version>${roaster.version}</version>
+			<groupId>org.jrebirth.af</groupId>
+			<artifactId>api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af.tooling</groupId>
 			<artifactId>codegen</artifactId>
-			<version>8.7.0-SNAPSHOT</version>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-model</artifactId>
-			<version>3.3.9</version>
+			<version>${maven.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId> <version>8.0</version> <scope>system</scope> <systemPath>${java.home}/../lib/tools.jar</systemPath> </dependency> -->
+		<!-- <dependency> <groupId>com.sun</groupId>
+		<artifactId>tools</artifactId> <version>8.0</version>
+		<scope>system</scope>
+		<systemPath>${java.home}/../lib/tools.jar</systemPath> </dependency> -->
 
 	</dependencies>
 
